# PetChat

./: .env.example  .gitignore  Makefile  docker-compose.yml  pyproject.toml  test.py
consumer/: .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml
consumer/html/: registration.html  update_email.html
consumer/src/: main.py
consumer/src/core/: container.py  settings.py
consumer/src/infrastructure/broker/: __init__.py  rabbitmq_broker.py
consumer/src/infrastructure/email/: __init__.py  gmail_email.py
consumer/src/services/abstract_interface/: __init__.py  abstract_broker.py  abstract_email.py
consumer/src/services/entities/: __init__.py  broker_entity.py  email_entity.py
consumer/src/services/use_cases/: __init__.py  broker_use_case.py  consumer_use_case.py  user_use_case.py
db/: init.sql
elastic/elasticsearch/: docker-entrypoint.sh  elasticsearch.yml  instances.yml  setup.sh
elastic/kibana/: kibana.yml
elastic/kibana/data/: uuid
elastic/logstash/: logstash.conf  logstash.yml
migration/: env.py
migration/versions/: 31e67cbcd159_.py  441b58a74d7d_.py  63b6978e2268_.py  b5298139c9be_.py
nginx/: fill_envsubst.sh  nginx.conf  nginx.conf.tmp
nginx/conf.d/: application.conf.tmp  default.conf.tmp  service.conf.tmp
src/: __init__.py  main.py
src/core/: config.py  containers.py  rabbitmq_core.py  redis_core.py  sqlalchemy_core.py
src/endpoints/api/: __init__.py
src/endpoints/dependencies/: __init__.py  dependencies.py
src/endpoints/exceptions/: __init__.py  abstract_exception.py  bad_request_exception.py  duplicate_exception.py  exceptions.py  many_request_exception.py  unauthorized_exception.py
src/endpoints/middlewares/: __init__.py  auth_middleware.py  logger_middleware.py  rate_limiter_middleware.py
src/infrastructure/broker/: rabbitmq_broker.py
src/infrastructure/memory_storage/: __init__.py  redis_memory_storage.py
src/infrastructure/repository/: __init__.py  adapters.py  postgres_repository.py
src/services/abstract_interface/: abstract_broker.py
src/services/abstract_interfase/: __init__.py  abstract_broker.py  abstract_memory_storage.py  abstract_repository.py
src/services/entities/: __init__.py  auth_entity.py  broker_entity.py  user_entity.py  user_history_entity.py
src/services/uow/: __init__.py  abstract_uow.py  rabbitmq_uow.py  redis_uow.py  repository_uow.py
src/utils/: __init__.py  helpers.py
tests/: conftest.py  utils.py
tests/test_handlers/: utils.py
(+30 files in other folders)
