[tool.poetry]
name = "rabbitmq-service"
version = "0.1.0"
description = ""
authors = ["NicholasNartikoev <nartikoevnicholas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.3"
pika = "^1.3.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
aio-pika = "^9.3.0"
aiosmtplib = "2.0.2"
dependency-injector = "^4.41.0"
aiofiles = "^23.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
